add customer/account generator

--- a/transactionGenerator/pom.xml
+++ b/transactionGenerator/pom.xml
@@ -15,5 +15,12 @@
 	<name>transactionGenerator</name>
 	<description>transactionGenerator</description>
 
+<dependencies>
+	<dependency>
+		<groupId>com.opencsv</groupId>
+		<artifactId>opencsv</artifactId>
+		<version>5.9</version>
+	</dependency>
 
+</dependencies>
 </project>
