--- a/transactionGenerator/src/main/resources/application.properties
+++ b/transactionGenerator/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 transaction.manager.generator.customer.count= 20
+transaction.manager.generator.customer.destination= /home/elham/IdeaProjects/data/customers
+transaction.manager.generator.account.destination= /home/elham/IdeaProjects/data/accounts
+transaction.manager.generator.account.max= 3
