add transaction generator

--- a/transactionGenerator/src/main/resources/application.properties
+++ b/transactionGenerator/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 transaction.manager.generator.customer.count= 20
 transaction.manager.generator.customer.destination= /home/elham/IdeaProjects/data/customers
 transaction.manager.generator.account.destination= /home/elham/IdeaProjects/data/accounts
+transaction.manager.generator.transaction.destination= /home/elham/IdeaProjects/data/transactions
 transaction.manager.generator.account.max= 3
