add loader db schema

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <modules>
         <module>transactionGenerator</module>
-        <module>common</module>
+        <module>loader</module>
     </modules>
 
     <dependencies>
@@ -40,9 +40,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
