--- a/loader/src/main/resources/application.properties
+++ b/loader/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.datasource.username=root
 spring.datasource.password=thisismysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=loader/schema.sql
+transaction.loader.db.transaction.input.directory=/home/elham/IdeaProjects/data/input/transactions
+transaction.loader.db.customer.input.directory=/home/elham/IdeaProjects/data/input/customers
+transaction.loader.db.account.input.directory=/home/elham/IdeaProjects/data/input/accounts
+transaction.loader.db.transaction.output.directory=/home/elham/IdeaProjects/data/output/transactions
+transaction.loader.db.customer.output.directory=/home/elham/IdeaProjects/data/output/customers
+transaction.loader.db.account.output.directory=/home/elham/IdeaProjects/data/output/accounts
 
 
